[metadata]
name = lnma-superres

description = FF-SRM methods
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Dr2-JMM/lnma-superres
author = "Rocco D'Antuono, Adán Guerrero, Raúl Pinto Cámara, Paúl Hernández Herrera, Esley Torres Garcia, Haydee Hernández, Raphaël Rème, Julián Mejía"
author_email = rocco.dantuono@hotmail.it; julian.mejia@ibt.unam.mx*
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/Dr2-JMM/lnma-superres/issues
    Documentation = https://github.com/Dr2-JMM/lnma-superres#README.md
    Source Code = https://github.com/Dr2-JMM/lnma-superres
    User Support = https://github.com/Dr2-JMM/lnma-superres/issues

[options]
packages = find:
install_requires =
    matplotlib
    numba
    numpy
    magicgui
    qtpy
    scipy


python_requires = >=3.8
include_package_data = True
package_dir =
    =src
setup_requires = setuptools_scm
# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    lnma-superres = lnma_superres:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/
    pytest-qt  # https://pytest-qt.readthedocs.io/en/latest/
    napari
    pyqt5


[options.package_data]
* = *.yaml
